# architect

./: .env  .env.local  .env.playfab.example  .gitignore  ACHIEVEMENTS_SUMMARY.md  ARCHITECTURE.md  AUTH_PROMPTS.md  CHANGELOG.md  CLERK_MIGRATION.md  CLERK_PRODUCTION_SETUP.md  CLERK_QUICKSTART.md  CLERK_SETUP.md  DEPLOY_NOW.md  FIXES_APPLIED.md  FIX_CLERK_UUID_ERROR.md  IMPLEMENTATION_COMPLETE.md  OAUTH_SETUP.md  PLAYFAB_MULTIPLAYER_GUIDE.md  PLAYFAB_SETUP.md  QUICKSTART_ACHIEVEMENTS.md  README.md  README_ACHIEVEMENTS.md  SETUP_CHECKLIST.md  STEAM_DISCORD_SETUP.md  STEAM_PUBLISH_RUNBOOK.txt  XBOX_CONTROLS.md  XBOX_DEPLOYMENT.md  XBOX_IMPLEMENTATION_SUMMARY.md  XBOX_QUICK_START.md  XBOX_TESTING_CHECKLIST.md  cloudscript.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-releases.yml
docs/: README.md
playfab/: CloudScript.js  README.md  initial-title-data.json
scripts/: build-all-platforms.sh  build-every-time.sh  export-steam.js  import-steam-sdk.js  stage-steam-windows.js  steam-publish.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AchievementsPanel.tsx
src/hooks/: useAuth.ts  useDiscordPresence.ts  useDiscovery.ts  useFavorites.ts  useFriends.ts  useGamePhysics.ts  (+13 more)
steam/: app_build.vdf  app_build_macos_only.vdf  app_build_windows_only.vdf  depot_macos.vdf  depot_macos_only.vdf  depot_shared.vdf  depot_windows.vdf  depot_windows_only.vdf
supabase/: config.toml  disable_rls.sql  fix_rls_complete.sql
(+65 files in other folders)
