[package]
name = "architect"
version = "0.5.3"
description = "Architect Steam Export"
authors = ["Architect Team"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
steamworks = "0.11"

[features]
default = []
